[package]
# 这是 Boundary 社区服工具箱的原生 Slint/Rust 重写版。
name = "boundary_toolbox"
version = "19.19.89"
edition = "2024"
build = "build.rs"

[dependencies]
# 安装器与核心逻辑使用的错误处理和时间戳。
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
# 工作线程与 Slint 控制器之间的消息通道。
crossbeam-channel = "0.5.15"
# 构建脚本生成图标时使用。
image = { version = "0.25.8", default-features = true, features = ["jpeg", "png", "ico"] }
# 让 ICU Provider 在 debug 下走 log crate，避免绕过日志过滤直接 eprintln。
icu_provider = { version = "2.2.0", default-features = false, features = ["logging"] }
# Windows 上 npm/cmd 输出可能使用系统代码页，失败弹窗需要兼容 GBK 解码。
encoding_rs = "0.8.35"
# 运行时诊断需要检查 TCP/UDP 端口。
log = "0.4.29"
netstat2 = "0.11.2"
regex = "1.12.2"
# 阻塞式 HTTPS 客户端，仅用于 ProjectRebound 在线更新。
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
# 原生 UI 工具包，不引入 webview 依赖。
slint = { version = "1.16.0", features = ["unstable-winit-030"] }
sysinfo = "0.38.4"
# 嵌入式 VNT 核心需要 Tokio 运行时。
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }
# 本地并入的 VNT v2 源码，用于原生联机页。
vnt-ipc = { path = "vendor/vnt/vnt-ipc" }
walkdir = "2.5.0"
winreg = "0.56.0"
zip = { version = "8.5.1", default-features = true, features = ["deflate"] }

[dependencies.windows]
# 使用 Win32 API 实现原子文件替换。
version = "0.62.2"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
# 构建脚本 build.rs 负责编译 Slint、嵌入 payload.zip 并生成 Windows 图标。
anyhow = "1.0.100"
embed-resource = "3.0.6"
image = { version = "0.25.8", default-features = true, features = ["jpeg", "png", "ico"] }
slint-build = "1.16.0"
walkdir = "2.5.0"
zip = { version = "8.5.1", default-features = true, features = ["deflate"] }

[profile.dev.package."*"]
# Debug 版仍保留本项目代码的快速编译和调试体验，但优化 Slint/Parley/字体等依赖，
# 否则页面切换和中文文本布局会明显卡顿。
opt-level = 2
